--- a/ratpack/build.gradle
+++ b/ratpack/build.gradle
@@ -1,14 +1,20 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
     dependencies {
         classpath "io.ratpack:ratpack-gradle:1.5.4"
+        classpath 'com.bmuschko:gradle-docker-plugin:3.6.2'
     }
 }
 
 apply plugin: "io.ratpack.ratpack-java"
 apply plugin: "idea"
+apply plugin: "com.bmuschko.docker-remote-api"
+
 
 repositories {
     jcenter()
@@ -18,6 +24,20 @@ dependencies {
     runtime "org.slf4j:slf4j-simple:1.7.25"
     compile "io.ratpack:ratpack-rx:1.5.4"
     compile project(":lopoo-core")
+}
+
+distZip {
+    // You only need to set this if you have specified an archive version. This removes the version number
+    // from the final distribution package which makes it easier to script in your Dockerfile.
+    archiveName = 'ratpack-docker.zip'
+}
+
+import com.bmuschko.gradle.docker.tasks.image.*
+
+task buildImage(type: DockerBuildImage) {
+    inputDir = new File("${projectDir}")
+    dockerFile = new File("${projectDir}/src/docker/Dockerfile")
+    tag = 'async-talk/ratpack:latest'
 }
 
 mainClassName = "com.gmjm.async.ratpack.Main"
